--- a/html5_css3/standard/css/style.css
+++ b/html5_css3/standard/css/style.css
@@ -1,4 +1,4 @@
-@@charset "UTF-8";
+@charset "UTF-8";
 
 html {
   font-size: 62.5%;
@@ -11,7 +11,7 @@ body {
 }
 
 *, *::before, *::after {
-  box-sizing: border-box;
+  box-sizing: border-box;  /* 要素の幅/高さをborderを含めたサイズ（paddingを含めたサイズ）で計算する指定 */
 }
 
 a:link, a:visited, a:hover, a:active {
@@ -62,6 +62,7 @@ a:link, a:visited, a:hover, a:active {
   display: inline-block;
   width: 100px;
   height: 30px;
+  line-height: 30px;
   text-align: center;
   border-radius: 8px;
   color: #666;
@@ -87,9 +88,331 @@ a:link, a:visited, a:hover, a:active {
   width: 660px;
 }
 
+.hot-topic {
+  display: block;
+  height: 300px;
+  margin-bottom: 30px;
+  background-color: #00fff0;
+  box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.15);
+  transition: opacity 0.15s;
+}
+
+.hot-topic:hover {
+  opacity: 0.85;
+}
+
+.hot-topic .image {
+  float: left;
+  width: 50%;
+  height: 100%;
+}
+
+.hot-topic .content {
+  position: relative;
+  float: left;
+  width: 50%;
+  height: 100%;
+  padding: 105px 25px 0;
+  background-color: #2d3d54;
+  line-height: 1.6;
+}
+
+.hot-topic .title {
+  margin-bottom: 15px;
+  color: #fff;
+  font-weight: normal;
+  font-size: 2.0rem;
+}
+
+.hot-topic .desc {
+  color: #ddc;
+}
+
+.hot-topic .date {
+  position: absolute;
+  top: 60px;
+  left: 0;
+  padding: 4px 16px;
+  background-color: #fff;
+  color: #2d3d54;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-size: 1.1rem;
+  line-height: 1;
+}
+
+.heading {
+  padding: 10px 12px;
+  background-color: #f1f1f1;
+  letter-spacing: 1px;
+  font-size: 1.6rem;
+}
+
+.scroll-list {
+  max-height: 220px;
+  overflow-y: auto;
+  margin-bottom: 30px;
+  list-style-type: none;
+  padding: 0;
+}
+
+.scroll-list .scroll-item a {
+  display: block;
+  padding: 10px 15px;
+  color: #333;
+  font-size: 0;
+  transition: background-color 0.1s;
+}
+
+.scroll-list .scroll-item:nth-of-type(even) a {
+  background-color: #f1f1f1;
+}
+
+.scroll-list .scroll-item a:hover {
+  background-color: #fafaf8;
+}
+
+.scroll-list .date {
+  display: inline-block;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-size: 1.0rem;
+  float: left;
+  line-height: 1.0rem;
+}
+
+.scroll-list .category {
+  display: inline-block;
+  border-radius: 5px;
+  background-color: #d03c56;
+  color: #fff;
+  text-align: center;
+  letter-spacing: 1px;
+  font-size: 1.0rem;
+  line-height: 16px;
+  float: left;
+  margin-left: 12px;
+  padding-left: 5px;
+  padding-right: 5px;
+  line-height: 1.2rem;
+}
+
+.scroll-list .category.news {
+  background-color: #2c3c53;
+}
+
+.scroll-list .title {
+  display: inline-block;
+  font-size: 1.2rem;
+  padding-left: 15px;
+  float: left;
+  line-height: 1.2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 69%;
+}
+
+.article-box {
+  position: relative;
+  display: block;
+  width: 315px;
+  height: 360px;
+  margin-bottom: 30px;
+  padding: 210px 15px 0;
+  box-shadow: 6px 6px 8px -4px rgba(0, 0, 0, 0.15);
+  transition: opacity 0.15s;
+}
+
+.article-box:hover {
+  opacity: 0.8;
+}
+
+.article-box .title {
+  margin-top: 30px;
+  color: #555;
+  font-size: 1.4rem;
+  line-height: 1.6;
+}
+
+.article-box .desc {
+  margin-top: 5px;
+  color: #333;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.article-box .date {
+  position: absolute;
+  right: 0;
+  bottom: 15px;
+  display: block;
+  width: 160px;
+  padding: 4px;
+  background-color: #b5d264;
+  color: #2d3d54;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.article-box:nth-of-type(odd) {
+  float: left;
+}
+
+.article-box:nth-of-type(even) {
+  float: right;
+}
+
 .sidemenu {
   float: right;
   width: 275px;
+}
+
+.ranking {
+  margin-bottom: 30px;
+  list-style-type: none;
+  counter-reset: ranking; /* カウンタを初期化 */
+}
+
+.ranking .ranking-item {
+  margin-top: 15px;
+}
+
+.ranking .ranking-item a {
+  display: block;
+  font-size: 0;
+  transition: opacity 0.15s;
+}
+
+.ranking .ranking-item a:hover {
+  opacity: 0.8;
+}
+
+.ranking .image {
+  width: 55px;
+  height: 55px;
+}
+
+.ranking .text {
+  display: inline-block;
+  width: 182px;
+  color: #000;
+  vertical-align: top;
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+.ranking .order {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  margin: 0 10px;
+  border: 1px solid #ccc;
+  color: #aaa;
+  vertical-align: 20px;
+  text-align: center;
+  font-weight: bold;
+  line-height: 16px;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.ranking .order::before {
+  content: counter(ranking);
+  counter-increment: ranking;
+  display: inline-block;
+  font-size: 1.0rem;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.ranking .ranking-item:nth-of-type(1) .order,
+.ranking .ranking-item:nth-of-type(2) .order,
+.ranking .ranking-item:nth-of-type(3) .order {
+  border: none;
+  color: #fff;
+  font-weight: normal;
+  line-height: 18px;
+}
+
+.ranking .ranking-item:nth-of-type(1) .order {
+  background-color: #dab413;
+}
+
+.ranking .ranking-item:nth-of-type(2) .order {
+  background-color: #6e7b84;
+}
+
+.ranking .ranking-item:nth-of-type(3) .order {
+  background-color: #a0541a;
+}
+
+.documents {
+  margin: 10px 10px 30px;
+}
+
+.documents,
+.documents ul {
+  list-style-type: none;
+}
+
+.documents > li .title {
+  margin: 15px 0;
+  padding-left: 8px;
+  border-left: 5px solid #d03c56;
+  font-size: 1.4rem;
+  line-height: 1.2;
+}
+
+.documents > li + li {
+  margin-top: 25px;
+}
+
+.documents > li ul {
+  margin: 15px;
+}
+
+.documents > li ul > li {
+  margin-bottom: 15px;
+  padding-left: 10px;
+}
+
+.documents a:hover {
+  text-decoration: underline;
+}
+
+.search-box {
+  padding: 15px;
+  background-color: #ccc;
+  font-size: 0;
+}
+
+.search-box > * {
+  font-size: 1.2rem;
+}
+
+.search-box .search-input {
+  width: 205px;
+  height: 26px;
+  padding: 0 10px;
+  border: none;
+}
+
+.search-box .search-button {
+  width: 40px;
+  height: 26px;
+  border: none;
+  background-color: #d03c56;
+  color: #fff;
+  cursor: pointer;
+}
+
+.search-box .text {
+  margin-top: 12px;
 }
 
 .footer {
