--- a/html5_css3/standard/css/style.css
+++ b/html5_css3/standard/css/style.css
@@ -25,6 +25,10 @@ a:link, a:visited, a:hover, a:active {
   clear: both;
 }
 
+.hidden {
+  display: none;
+}
+
 .header {
   width: 100%;
   padding: 28px 0 10px;
@@ -275,6 +279,7 @@ a:link, a:visited, a:hover, a:active {
 .ranking {
   margin-bottom: 30px;
   list-style-type: none;
+  padding: 0;
   counter-reset: ranking; /* カウンタを初期化 */
 }
 
@@ -285,6 +290,7 @@ a:link, a:visited, a:hover, a:active {
 .ranking .ranking-item a {
   display: block;
   font-size: 0;
+  position: relative;
   transition: opacity 0.15s;
 }
 
@@ -304,31 +310,36 @@ a:link, a:visited, a:hover, a:active {
   vertical-align: top;
   font-size: 1.2rem;
   line-height: 1.5;
+  margin: 0 0 0 16px;
 }
 
 .ranking .order {
   display: inline-block;
   width: 18px;
   height: 18px;
-  margin: 0 10px;
+  left: 46px;
+  top: -9px;
   border: 1px solid #ccc;
   color: #aaa;
-  vertical-align: 20px;
+  /*vertical-align: 20px;*/
   text-align: center;
   font-weight: bold;
   line-height: 16px;
-  -webkit-transform: rotate(45deg);
+  border-radius: 9px;
+  position: absolute;
+  background-color: #fff;
+  /*-webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+  transform: rotate(45deg);*/
 }
 .ranking .order::before {
   content: counter(ranking);
   counter-increment: ranking;
   display: inline-block;
   font-size: 1.0rem;
-  -webkit-transform: rotate(-45deg);
+  /*-webkit-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  transform: rotate(-45deg);*/
 }
 .ranking .ranking-item:nth-of-type(1) .order,
 .ranking .ranking-item:nth-of-type(2) .order,
@@ -358,6 +369,7 @@ a:link, a:visited, a:hover, a:active {
 .documents,
 .documents ul {
   list-style-type: none;
+  padding: 0;
 }
 
 .documents > li .title {
