--- a/html5_css3/grid/css/style.css
+++ b/html5_css3/grid/css/style.css
@@ -20,6 +20,53 @@ a:link, a:visited, a:hover, a:active {
   text-decoration: none;
 }
 
+.header {
+  padding: 25px 0;
+  border-bottom: none;
+  text-align: center;
+}
+
+.logo {
+  width: 136px;
+  height: 136px;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+}
+
+.logo:hover {
+  -webkit-transform: rotate(360deg);
+  transform: rotate(360deg);
+}
+
+.nav {
+  margin: 35px auto 10px;
+}
+
+.nav-item {
+  margin-top: 20px;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+
+.nav-item a {
+  display: inline-block;
+}
+
+.nav-item a::after {
+  content: '';
+  display: block;
+  width: 0;
+  margin: 6px auto 0;
+  border-bottom: 1px solid #7c5119;
+  transition: width 0.3s ease-in-out;
+}
+
+.nav-item a:hover::after {
+  width: 100%;
+}
+
 .item {
   width: 180px;
   margin-bottom: 4px;
@@ -27,6 +74,14 @@ a:link, a:visited, a:hover, a:active {
   border-bottom: 3px solid;
   border-radius: 5px;
   background-color: #fff;
+}
+
+.item-m {
+  width: 364px;
+}
+
+.item-l {
+  width: 732px;
 }
 
 .item .image {
