--- a/react_basic/basic-app/src/Works/Box/style.css
+++ b/react_basic/basic-app/src/Works/Box/style.css
@@ -61,9 +61,20 @@
   width: 60%;
   margin-top: 20px;
   padding: 3px;
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #afa58d;
+  color: #fff;
+  text-decoration: none;
+  letter-spacing: 1px;
+  font-size: 1.2rem;
 }
 
-.button-ghost {
+.work-text .button:hover {
+  opacity: 0.9;
+}
+
+.work-text .button-ghost {
   border: 1px solid #fff;
   background-color: rgba(255, 255, 255, 0.15);
 }
