--- a/react_basic/basic-app/src/index.css
+++ b/react_basic/basic-app/src/index.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
+@import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);
 
 html {
   font-size: 62.5%;
